BuildHughes/translation-tool/inputs/source_meta/objects/Service_Offerings__c.object
<CustomObject>
    <description>Stores all service offerings</description>
    <fields>
        <fullName>Billing_Deal_Description__c</fullName>
        <label>Billing Deal Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Deal_Name__c</fullName>
        <label>Billing Deal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Type__c</fullName>
        <description>What is the charge cycle for the Contracted Price?</description>
        <inlineHelpText>What is the charge cycle for the Contracted Price?</inlineHelpText>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Onetime</fullName>
                </value>
                <value>
                    <fullName>Recurring</fullName>
                </value>
                <value>
                    <fullName>Installment</fullName>
                </value>
                <value>
                    <fullName>Usage-Based</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Circuit_Transport__c</fullName>
        <description>What is the transport for this Hughes service?</description>
        <inlineHelpText>What is the transport for this Hughes service?</inlineHelpText>
        <label>Circuit Transport</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BYOB</fullName>
                </value>
                <value>
                    <fullName>Cable</fullName>
                </value>
                <value>
                    <fullName>Dedicated DSL</fullName>
                </value>
                <value>
                    <fullName>Dial-Up</fullName>
                </value>
                <value>
                    <fullName>Fiber</fullName>
                </value>
                <value>
                    <fullName>Shared DSL</fullName>
                </value>
                <value>
                    <fullName>Uverse</fullName>
                </value>
                <value>
                    <fullName>VSAT</fullName>
                </value>
                <value>
                    <fullName>Wireless</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Circuit_Type__c</fullName>
        <description>Primary circuit or backup circuit.</description>
        <inlineHelpText>Primary circuit or backup circuit.</inlineHelpText>
        <label>Circuit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Backup</fullName>
                </value>
                <value>
                    <fullName>Temporary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contracted_Price__c</fullName>
        <label>Contracted Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Embedded_Billing_Deal_Name__c</fullName>
        <description>Allows users to enter any combination of letters, numbers, or symbols. You can set a maximum length, up to 255 characters.</description>
        <label>Embedded Billing Deal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Description__c</fullName>
        <description>(Optional) Customer-friendly description of equipment included in service offering.</description>
        <inlineHelpText>Customer-friendly description of equipment included in service offering.</inlineHelpText>
        <label>Equipment Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installment_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this service offering categorized by DSS as an installment?</description>
        <inlineHelpText>Is this service offering categorized by DSS as an installment?</inlineHelpText>
        <label>Installment Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this service offering active or inactive?</description>
        <inlineHelpText>Is this service offering active or inactive?</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Bundle_Key__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this service offering used as the key to a product (services) bundle?  There can only be one key service offering per bundle.</description>
        <inlineHelpText>Is this service offering used as the key to a product (services) bundle?</inlineHelpText>
        <label>Is Bundle Key</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this service offering the default offering for this plan (usually none when the plan is optional)?</description>
        <inlineHelpText>Is this service offering the default offering for this plan (usually none when the plan is optional)?</inlineHelpText>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Service_Offering__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If False, then there is no service offering (just a placeholder).</description>
        <inlineHelpText>If False, then there is no service offering (just a placeholder).</inlineHelpText>
        <label>Is Service Offering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Multiple_Billing_Products__c</fullName>
        <label>Multiple Billing Products</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onetime_Charge__c</fullName>
        <description>If available, what is the onetime charge (price) for this service offering?</description>
        <inlineHelpText>If available, what is the onetime charge (price) for this service offering?</inlineHelpText>
        <label>Onetime Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Path_ID__c</fullName>
        <externalId>true</externalId>
        <label>Path ID</label>
        <length>254</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Path__c</fullName>
        <description>Product catalog path to this service offering.</description>
        <inlineHelpText>Product catalog path to this service offering.</inlineHelpText>
        <label>Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <description>Is this service offering part of a lease or purchase?</description>
        <inlineHelpText>Is this service offering part of a lease or purchase?</inlineHelpText>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lease</fullName>
                </value>
                <value>
                    <fullName>Purchase</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Code__c</fullName>
        <description>The program code belonging to the customer campaign parent of this service offering.</description>
        <inlineHelpText>The program code belonging to the customer campaign parent of this service offering.</inlineHelpText>
        <label>Program Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CHBPGM02</fullName>
                </value>
                <value>
                    <fullName>DNYFRPC</fullName>
                </value>
                <value>
                    <fullName>KFCFPGM01</fullName>
                </value>
                <value>
                    <fullName>LJSFPGM01</fullName>
                </value>
                <value>
                    <fullName>MOBFPGM01</fullName>
                </value>
                <value>
                    <fullName>PILPGM02</fullName>
                </value>
                <value>
                    <fullName>YUMPFPGM01</fullName>
                </value>
                <value>
                    <fullName>YUMTFPGM01</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recurring_Charge__c</fullName>
        <description>If available, what is the recurring monthly charge (price) for this service offering?</description>
        <inlineHelpText>If available, what is the recurring monthly charge (price) for this service offering?</inlineHelpText>
        <label>Recurring Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SO_ID__c</fullName>
        <description>Salesforce autonumber for service offering (product).</description>
        <displayFormat>SO-{0000000000}</displayFormat>
        <inlineHelpText>Salesforce autonumber for service offering (product).</inlineHelpText>
        <label>SO ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Service_Offering_Description__c</fullName>
        <description>(Optional) Customer-friendly description of service offering.</description>
        <inlineHelpText>Customer-friendly description of service offering.</inlineHelpText>
        <label>Service Offering Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Offering_ID__c</fullName>
        <formula>Id</formula>
        <label>Service Offering ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <description>Term of service (in months).</description>
        <inlineHelpText>Term of service (in months).</inlineHelpText>
        <label>Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Service Offerings</label>
    <nameField>
        <label>Service Offering Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Offerings</pluralLabel>
    <recordTypes>
        <fullName>FOSS</fullName>
        <active>true</active>
        <description>Controls picklist values, page layouts, and determines which User Profiles can view this category of records.</description>
        <label>FOSS</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>IOES_Onetime_charge_validation_check</fullName>
        <active>true</active>
        <description>To verify onetime charge is not provided if Billing type is not One time charge</description>
        <errorConditionFormula>AND(OR(ISPICKVAL(Billing_Type__c,&apos;Recurring&apos;),ISPICKVAL(Billing_Type__c,&apos;Installment&apos;),ISPICKVAL(Billing_Type__c,&apos;Usage-Based&apos;)),
OR( Onetime_Charge__c  &lt;&gt; 0,NOT(ISNULL(Onetime_Charge__c))))</errorConditionFormula>
        <errorDisplayField>Onetime_Charge__c</errorDisplayField>
        <errorMessage>One time charge data is not valid</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IOES_RecurringCharge_Null_Check</fullName>
        <active>true</active>
        <description>To verify RecurringCharge is not provided if Billing type is not One time charge</description>
        <errorConditionFormula>AND(ISPICKVAL(Billing_Type__c,&apos;Onetime&apos;),
OR( Recurring_Charge__c  &lt;&gt; 0,NOT(ISNULL(Recurring_Charge__c))))</errorConditionFormula>
        <errorDisplayField>Recurring_Charge__c</errorDisplayField>
        <errorMessage>Recurring charge data is not valid</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IOES_Recurring_Charge_validation_check</fullName>
        <active>false</active>
        <description>To verify Recurring charge is provided for all SO&apos;s if billing type is recurring</description>
        <errorConditionFormula>AND(OR(ISPICKVAL(Billing_Type__c,&apos;Recurring&apos;),ISPICKVAL(Billing_Type__c,&apos;Installment&apos;),ISPICKVAL(Billing_Type__c,&apos;Usage-Based&apos;)),
ISNULL(Recurring_Charge__c) )</errorConditionFormula>
        <errorDisplayField>Recurring_Charge__c</errorDisplayField>
        <errorMessage>Recurring Charge is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IOES_Term_validation_check</fullName>
        <active>false</active>
        <description>To verify term is provided for all SO&apos;s</description>
        <errorConditionFormula>AND(Is_Active__c= TRUE ,OR(ISPICKVAL(Billing_Type__c,&apos;Recurring&apos;),
ISPICKVAL(Billing_Type__c,&apos;Installment&apos;),ISPICKVAL(Billing_Type__c,&apos;Usage-Based&apos;)),
Recurring_Charge__c    &lt;&gt;   0,
OR(Term__c=0,ISNULL(Term__c)))</errorConditionFormula>
        <errorDisplayField>Term__c</errorDisplayField>
        <errorMessage>Term is required</errorMessage>
    </validationRules>
</CustomObject>